--- a/app/src/main/res/layout/cart_layout.xml
+++ b/app/src/main/res/layout/cart_layout.xml
@@ -5,7 +5,7 @@
     android:padding="20dp"
     android:background="#FAFAFA">
 
-    <!-- Список товаров в корзине с тенью -->
+    <!-- Список товаров в корзине -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/cartRecyclerView"
         android:layout_width="match_parent"
@@ -25,9 +25,9 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="#001A34"
-    android:layout_marginTop="20dp"
-    android:layout_marginBottom="20dp"
-    android:fontFamily="@font/ramona_bold"/>
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:fontFamily="@font/ramona_bold"/>
 
     <!-- Кнопки -->
     <Button
@@ -38,11 +38,11 @@
         android:textSize="18dp"
         android:textColor="#FFFFFF"
         android:backgroundTint="#005BFF"
-    android:fontFamily="@font/ramona_bold"
-    android:layout_marginBottom="12dp"
-    android:elevation="6dp"
-    android:importantForAccessibility="yes"
-    android:contentDescription="Очистить корзину"/>
+        android:fontFamily="@font/ramona_bold"
+        android:layout_marginBottom="12dp"
+        android:elevation="6dp"
+        android:importantForAccessibility="yes"
+        android:contentDescription="Очистить корзину"/>
 
     <Button
         android:id="@+id/checkoutButton"
@@ -52,8 +52,8 @@
         android:textSize="18sp"
         android:textColor="#FFFFFF"
         android:backgroundTint="#00A2FF"
-    android:fontFamily="@font/ramona_bold"
-    android:elevation="6dp"
-    android:importantForAccessibility="yes"
-    android:contentDescription="Перейти к оплате" />
+        android:fontFamily="@font/ramona_bold"
+        android:elevation="6dp"
+        android:importantForAccessibility="yes"
+        android:contentDescription="Перейти к оплате" />
 </LinearLayout>
