--- a/app/src/main/res/layout/catalog_seller_layout.xml
+++ b/app/src/main/res/layout/catalog_seller_layout.xml
@@ -15,4 +15,11 @@
         android:layout_height="match_parent"
         android:scrollbars="vertical"
         android:padding="4dp" />
+
+    <TextView
+        android:id="@+id/emptyView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ничего не найдено"
+        android:visibility="gone" />
 </LinearLayout>
