--- a/app/src/main/res/layout/create_product_layout.xml
+++ b/app/src/main/res/layout/create_product_layout.xml
@@ -13,12 +13,12 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:fontFamily="@font/ramona_bold"
         android:text="Добавление товара"
         android:textColor="#001A34"
-        android:textSize="32sp"
-        android:fontFamily="@font/ramona_bold"
-        android:layout_marginBottom="40dp"
-        android:textStyle="bold"/>
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <!-- Поле для названия товара -->
     <EditText
@@ -30,7 +30,7 @@
         android:textColor="#001A34"
         android:background="@drawable/rounded_edittext_background"
         android:padding="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="10dp"
         android:fontFamily="@font/ramona_light"
         android:textColorHint="#005BFF"
         android:importantForAccessibility="yes"
@@ -41,7 +41,7 @@
         android:id="@+id/productTypeSpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/rounded_edittext_background"
         android:padding="16dp"
         android:popupBackground="#FFFFFF"
@@ -60,12 +60,29 @@
         android:textColor="#001A34"
         android:background="@drawable/rounded_edittext_background"
         android:padding="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="10dp"
         android:inputType="numberDecimal"
         android:fontFamily="@font/ramona_light"
         android:textColorHint="#005BFF"
         android:importantForAccessibility="yes"
         android:contentDescription="Поле для ввода цены товара"/>
+
+    <!-- Поле для количества товара -->
+    <EditText
+        android:id="@+id/productQuantityInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Количество товара"
+        android:textSize="18sp"
+        android:textColor="#001A34"
+        android:background="@drawable/rounded_edittext_background"
+        android:padding="16dp"
+        android:layout_marginBottom="10dp"
+        android:inputType="number"
+        android:fontFamily="@font/ramona_light"
+        android:textColorHint="#005BFF"
+        android:importantForAccessibility="yes"
+        android:contentDescription="Поле для ввода количества товара"/>
 
     <!-- Поле для описания товара -->
     <EditText
@@ -77,7 +94,7 @@
         android:textColor="#001A34"
         android:background="@drawable/rounded_edittext_background"
         android:padding="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="10dp"
         android:fontFamily="@font/ramona_light"
         android:textColorHint="#005BFF"
         android:importantForAccessibility="yes"
@@ -91,33 +108,34 @@
         android:text="Выбрать изображение"
         android:textColor="#FFFFFF"
         android:backgroundTint="#005BFF"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:fontFamily="@font/ramona_bold"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="10dp"
         android:importantForAccessibility="yes"
         android:contentDescription="Кнопка для выбора изображения товара"/>
 
     <!-- Изображение товара (превью) -->
+
+    <!-- Кнопка для сохранения товара -->
     <ImageView
         android:id="@+id/productImagePreview"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:scaleType="centerCrop"
-        android:background="#F1F1F1"
         android:layout_marginBottom="16dp"
-        android:contentDescription="Превью изображения товара"/>
+        android:background="#F1F1F1"
+        android:contentDescription="Превью изображения товара"
+        android:scaleType="centerCrop" />
 
-    <!-- Кнопка для сохранения товара -->
     <Button
         android:id="@+id/saveProductButton"
-        android:layout_width="match_parent"
+        android:layout_width="370dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#005BFF"
+        android:contentDescription="Кнопка для сохранения товара"
+        android:fontFamily="@font/ramona_bold"
+        android:importantForAccessibility="yes"
         android:text="Сохранить товар"
         android:textColor="#FFFFFF"
-        android:backgroundTint="#005BFF"
-        android:textSize="18sp"
-        android:fontFamily="@font/ramona_bold"
-        android:layout_marginBottom="16dp"
-        android:importantForAccessibility="yes"
-        android:contentDescription="Кнопка для сохранения товара"/>
+        android:textSize="18sp" />
 </LinearLayout>
