--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -65,9 +64,9 @@
                     android:layout_height="18dp"
                     android:src="@drawable/strelka"
                     android:rotation="180"
-                android:contentDescription="Уменьшить"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:layout_marginEnd="8dp"/>
+                    android:contentDescription="Уменьшить"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:layout_marginEnd="8dp"/>
 
                 <!-- Количество -->
                 <TextView
@@ -85,9 +84,20 @@
                     android:layout_width="18dp"
                     android:layout_height="18dp"
                     android:src="@drawable/strelka"
-                android:contentDescription="Увеличить"
-                android:background="?attr/selectableItemBackgroundBorderless" />
+                    android:contentDescription="Увеличить"
+                    android:background="?attr/selectableItemBackgroundBorderless" />
             </LinearLayout>
         </LinearLayout>
+
+        <!-- Кнопка удаления товара -->
+        <ImageView
+            android:id="@+id/deleteItemButton"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/delete"
+            android:tint="#F1117E"
+            android:contentDescription="Удалить товар"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:layout_marginStart="16dp"/>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
