--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="highlight_color">#F1117E</color>
     <color name="text_color_primary">#FFFFFF</color>
     <color name="text_color_secondary">#F1117E</color>
+    <color name="light_gray">#CCCCCC</color>
 </resources>
