--- a/app/src/main/res/layout/add_card_dialog.xml
+++ b/app/src/main/res/layout/add_card_dialog.xml
@@ -42,7 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="ММ/ГГ"
-        android:inputType="number"
+        android:inputType="text"
         android:textSize="16sp"
         android:textColor="#001A34"
         android:background="@drawable/rounded_edittext_background"
