--- a/app/src/main/res/layout/order_layout.xml
+++ b/app/src/main/res/layout/order_layout.xml
@@ -26,6 +26,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"/>
+    <Button
+        android:id="@+id/addCardButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Привязать карту"
+        android:textColor="#005BFF"
+        android:backgroundTint="#FFFFFF"
+        android:textSize="16sp"
+        android:fontFamily="@font/ramona_bold"
+        android:visibility="gone"
+        android:layout_marginTop="16dp" />
 
     <!-- Отображение выбранной карты -->
     <TextView
