--- a/app/src/main/res/layout/profile_activity.xml
+++ b/app/src/main/res/layout/profile_activity.xml
@@ -12,6 +12,10 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp">
+        <Button
+            android:id="@+id/testButton"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
         <!-- Верхнее меню (Toolbar) -->
         <androidx.appcompat.widget.Toolbar
@@ -139,4 +143,5 @@
             android:layout_marginBottom="16dp"/>
 
     </LinearLayout>
+
 </ScrollView>
