--- a/app/src/main/res/layout/seller_registration_dialog.xml
+++ b/app/src/main/res/layout/seller_registration_dialog.xml
@@ -134,6 +134,7 @@
             android:id="@+id/etOGRNIP"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLength="15"
             android:hint="ОГРНИП"
             android:inputType="number"
             android:textColor="#001A34"
@@ -160,6 +161,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="ИНН"
+            android:maxLength="10"
             android:inputType="number"
             android:textColor="#001A34"
             android:textSize="16sp"
