--- a/app/src/main/res/color/switch_track_selector.xml
+++ b/app/src/main/res/color/switch_track_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="true" android:color="#005BFF"/> <!-- Цвет трека, когда Switch включён -->
-    <item android:state_checked="false" android:color="#E6F0FF"/> <!-- Цвет трека, когда Switch выключен -->
+    <item android:state_checked="true" android:color="#005BFF"/>
+    <item android:state_checked="false" android:color="#E6F0FF"/>
 </selector>
