--- a/app/src/main/res/drawable/gray_border.xml
+++ b/app/src/main/res/drawable/gray_border.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <stroke
         android:width="1dp"
-        android:color="#BACBD3FF" /> <!-- Gray border color -->
+        android:color="#BACBD3FF" />
     <corners
-        android:radius="4dp" /> <!-- Optional: Add rounded corners -->
+        android:radius="4dp" />
 </shape>
