--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
     <!-- Стиль для заголовков -->
     <style name="HeaderTextStyle">
-        <item name="android:fontFamily">@font/ramona_bold</item>
+        <item name="android:fontFamily">@font/montserratsemibold</item>
         <item name="android:textColor">#001A34</item>
         <item name="android:textSize">24sp</item>
         <item name="android:layout_marginBottom">24dp</item>
@@ -9,7 +9,7 @@
 
     <!-- Стиль для обычного текста -->
     <style name="BodyTextStyle">
-        <item name="android:fontFamily">@font/ramona_light</item>
+        <item name="android:fontFamily">@font/montserratregular</item>
         <item name="android:textColor">#001A34</item>
         <item name="android:textSize">16sp</item>
     </style>
@@ -19,21 +19,21 @@
         <item name="android:backgroundTint">#005BFF</item>
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">18sp</item>
-        <item name="android:fontFamily">@font/ramona_bold</item>
+        <item name="android:fontFamily">@font/montserratsemibold</item>
     </style>
 
     <!-- Стиль для ссылок -->
     <style name="LinkTextStyle">
         <item name="android:textColor">#00A2FF</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:fontFamily">@font/ramona_light</item>
+        <item name="android:fontFamily">@font/montserratregular</item>
     </style>
 
     <!-- Стиль для ссылки восстановления пароля -->
     <style name="ForgotPasswordStyle">
         <item name="android:textColor">#F1117E</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:fontFamily">@font/ramona_light</item>
+        <item name="android:fontFamily">@font/montserratregular</item>
     </style>
     <style name="GradientText" parent="TextAppearance.AppCompat.Large">
         <item name="android:textSize">60sp</item>
@@ -47,7 +47,7 @@
             <item name="android:textColor">@color/primary_color</item>
             <item name="android:textSize">16sp</item>
             <item name="android:layout_marginBottom">16dp</item>
-            <item name="android:fontFamily">@font/ramona_bold</item>
+            <item name="android:fontFamily">@font/montserratsemibold</item>
         </style>
 
         <!-- Стиль для TextInputLayout -->
@@ -77,8 +77,4 @@
             <!-- Фон (убираем фон, чтобы он соответствовал стилю обводки) -->
             <item name="android:background">@null</item>
         </style>
-
-
-
-
 </resources>
